Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3119,6 +3119,11 @@ input, select, textarea {
 			display: none;
 		}
 
+		#navbar {
+			width: 100%; /* Make the navbar cover the full width for small screens */
+			left: 0;
+		}
+
 		#navbar ul {
 			align-items: center; /* Centers the links */
 		}
@@ -3241,6 +3246,11 @@ input, select, textarea {
 				font-size: 1.35em;
 			}
 
+		#navbar {
+			width: 100%; /* Make the navbar cover the full width for small screens */
+			left: 0;
+		}
+
 		#navbar ul {
 			align-items: center;
 		}
@@ -3313,6 +3323,11 @@ input, select, textarea {
 		}
 		.footer-connect {
 			display: none;
+		}
+
+		#navbar {
+			width: 100%; /* Make the navbar cover the full width for small screens */
+			left: 0;
 		}
 
 		#navbar ul {
